@@ -1,3 +1,11 @@
+2007-01-17  Adar Wesley <adarw@mainsoft.com>
+
+	* Repeater.cs: refactored GetData to return data both from DataSource
+	and DataSrouceID, Implemented EnableTheming, updated initialization of
+	DataBinding according to the pattern of BaseDataBoundControl, fixed
+	SelectArguments implementation to call the virtual 
+	CreateDataSourceSelectArguments method.
+
 2007-01-17  Konstantin Triger <kostat@mainsoft.com>
 
 	* BaseValidator.cs: ToString the validating property value or
